--- a/index.html
+++ b/index.html
@@ -562,6 +562,7 @@ Soy una persona emprendedora, que adora los retos y no se rinde fácilmente. Muy
 	</section>
     <section id="contactame">
                 <div class="container">
+                    <h2 class="titulo">Contáctame</h2>
                     <form name="contacto" id="contacto" method="post" action="">
             <div class="row">
 		        <article class="col-md-6 col-sm-12 form-group">
